# Wormhole

./: .SRCINFO  .gitignore  Cargo.toml  Dockerfile  PKGBUILD  README.md  XFSTESTS.md  build.rs  docker-compose.test.yml  docker-compose.yml  flake.nix  help.html  search-index.js  settings.html  src-files.js
.github/: installer.iss
.github/workflows/: ci-nix-format.yml  ci-nix-pipeline.yml  ci-windows.yml  ghcr.yml  mirror.yml  release.yml  xfstests.yml
docs/getting-started/: docker_guide.md  getting_started.md  install.md  installation.md  kubernetes.md  testing_environement_installation.md
docs/testing/: XFSTESTS_CATALOG.md  xfstests_full_list.md
docs/uml/: new.uxf
docs/user-guide/: QA_STRATEGY.md
gonogo-review/: ATP.md
k8s/: .env.exemple  README.md  deploy_wormhole.sh  wormhole.yaml
nix/: package.nix
search.desc/wormhole/: wormhole-desc-0-.js
search.desc/wormholed/: wormholed-desc-0-.js
search.index/: 009e82835a2f.js  014c0cb8880b.js  01a5b56b012e.js  01bccaa9a130.js  01e5d0379d03.js  026da5c13323.js  03087f1a7173.js  03bade5cbfbe.js  03f037c7fa1d.js  040e112861d6.js  041dd18013b8.js  04e223c0eb6a.js  0510f74a6e98.js  052282ab0031.js  053486277ac1.js  053dea534100.js  055ec0736d55.js  05adcbe0408a.js  05fb93263f27.js  06943dc22915.js  06d2a1a95806.js  0715edf2b106.js  07a60d877a98.js  085b0605f814.js  087f513f78f9.js  08aba5e7d7ee.js  09925d04e877.js  09fdb4026efa.js  0a418c3097c8.js  0acbbd6c905c.js  0adcb345a491.js  0b0615050f32.js  0b8395c92dc0.js  0bdd862565b9.js  0c3097b3e1b4.js  0c6d15dad5b9.js  0d9d8df96ea7.js  0da571b33e0d.js  0e44cc279ae2.js  0e5fd473c83f.js  (+359 more)
search.index/crateNames/: 5bb880ad6112.js
search.index/desc/: 02c482b6ce97.js  07eda930de0d.js  4a97bf8c8b4b.js
search.index/entry/: 9c3f168c6f68.js  b169349574d0.js  c238b4dbb9c7.js
search.index/function/: 1a85ccafb95f.js  5fc3bea9cbf3.js  ca23ae0549ee.js
search.index/generic_inverted_index/: 274b4b9383b7.js  6bdb8c5799f2.js  6c066664e992.js
search.index/name/: 2b8b990ae9a1.js  55f6360247b5.js  fa860abc84bb.js
search.index/normalizedName/: 6a9343675d9d.js  7d6b9eaee0da.js  a991a1e243b6.js
search.index/path/: af47e336622a.js  be7299316837.js
search.index/type/: 24bc0afd0ff5.js  404490b77988.js  bf1393705f0f.js
src/: error.rs  lib.rs  logging.rs  service.rs  signals.rs  startup.rs
src/cli/: clap.rs  config_clap.rs  config_command.rs  connection.rs  display.rs  mod.rs  network.rs
src/commands/: cli_commands.rs  mod.rs  register.rs  unregister.rs
src/config/: local_file.rs  mod.rs  parser.rs  types.rs
src/data/: metadata.rs  mod.rs  tree_hosts.rs
src/fuse/: fuse_impl.rs  linux_attrs.rs  linux_mknod.rs
src/ipc/: answers.rs  commands.rs  error.rs  mod.rs  service.rs
src/network/: codec.rs  commands.rs  forward.rs  handshake.rs  ip.rs  message.rs  metrics.rs  mod.rs  peer_ipc.rs  quota_req_res.rs  server.rs
src/providers/: helpers.rs  mod.rs  readers.rs  writers.rs
src/service/: clap.rs  connection.rs  mod.rs  save.rs  socket.rs
src/winfsp/: mod.rs  reparse_data.rs  traits.rs  winfsp_impl.rs
src/wormhole/: error.rs.html  lib.rs.html  signals.rs.html
src/wormholed/: service.rs.html
tests/: mount.fuse.wormhole  run_xfstests_docker.sh  tests.rs  xfstests_exclude.txt  xfstests_noop_mount.sh
tests/functionnal/: environnement_manager.rs  mod.rs  test_base_files.rs  test_metadata.rs  test_symlink.rs  test_sync.rs
tests/unit/: arbo_tests.rs  disk_manager_tests.rs  itree_tests.rs  mod.rs  whpath_tests.rs
tests/xfstests/: Dockerfile  XFSTESTS.md  docker-compose.test.yml  generate_test_list.sh  (+3 more)
wormhole/: all.html  constant.INSTANCE_PATH.html  index.html  sidebar-items.js
wormholed/: all.html  constant.DEFAULT_ADDRESS.html  constant.MAX_PORT.html  constant.MAX_TRY_PORTS.html  enum.CliListenerError.html  fn.get_cli_command.html  fn.handle_cli_command.html  fn.handle_signals.html  fn.handle_signals_unix.html  fn.main.html  fn.start_cli_listener.html  fn.stop_all_pods.html  fn.terminal_watchdog.html  index.html  sidebar-items.js  struct.ServiceArgs.html  type.CliTcpWriter.html
(+483 files in other folders)
