[package]
name = "wormhole"
version = "0.1.0"
edition = "2021"

[target.'cfg(windows)'.dependencies.winfsp]
default-features = false
features = ["stable", "system", "windows-rs-error"]
version = "0.11.3"

[target.'cfg(windows)'.build-dependencies.winfsp]
default-features = false
features = ["stable", "windows-rs-error", "delayload"]
version = "0.11.3"

[target.'cfg(unix)'.dependencies]
fuser = "0.14.0"
openat = "0.1.21"


[target.'cfg(windows)'.dependencies]
winfsp-sys = "0.2.2"

[dependencies]
clap = { version = "4.5.8", features = ["cargo", "derive"] }
libc = "0.2.155"
pkg-config = "0.3.30"
walkdir = "2.5.0"
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"
log = "0.4.22"
tokio = { version = "1.38.0", default-features = false, features = ["io-std", "macros", "net", "rt-multi-thread", "time", "sync"] }
tokio-tungstenite = "0.23"
futures-util = { version = "0.3.30", default-features = false, features = ["sink", "std"] }
env_logger = "0.11.3"
notify = "6.1.1"
bincode = "1.3.3"
tokio-stream = "0.1.16"
